Added styling for vimeo blocks

--- a/index.html
+++ b/index.html
@@ -31,22 +31,17 @@ $$ |  $$ |\$$$$$$  |$$$$$$$  |  \$$$$  |$$ |$$ |  $$ |
     background-size: cover; ">
 -->
 	<body>
-		<div class="street-machine">
-			<h1 class="street">
-				Austin
-			</h1>
-			<h3 class="machine">
-				Mast
-			</h3>
-		</div>
+    <div class="austin-wrapper">
+      Austin Mast 
+    </div>
 	
 		<!-- Vimeo embeds -->
 		<div>
 			<div class="vimeo-container">
-				<iframe src="//player.vimeo.com/video/80824189" width="500" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<iframe src="//player.vimeo.com/video/106863467" width="500" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<iframe src="//player.vimeo.com/video/106855598" width="500" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<iframe src="//player.vimeo.com/video/40992951" width="500" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<iframe class="vimeo-block" src="//player.vimeo.com/video/80824189" width="500" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<iframe class="vimeo-block" src="//player.vimeo.com/video/106863467" width="500" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<iframe class="vimeo-block" src="//player.vimeo.com/video/106855598" width="500" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<iframe class="vimeo-block" src="//player.vimeo.com/video/40992951" width="500" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 			</div>
 		</div>
 	
